--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -28,6 +28,6 @@
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/1/n13203646.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205340-ce11dfb4853199420b37e47c5739a183-320x200.jpg" align ="left"></a><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/1/n13203646.md#1" target="_blank">【有冇搞错】中国周边紧张 冲突一触即发</a><br></h3>中国修订《海上交通安全法》，禁外国军舰无害通过领海。实际上，中共从......<br><img align="bottom" src="https://raw.githubusercontent.com/okmvia343/www/master/t/ntdtv/time.gif">09月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205405.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205405.md#1" target="_blank">中国打压科技公司 外媒：自废武功</a><br></h3>中国以“社会公正”为由，对境内科技公司实施大规模打压，外媒分析指出......<br><img align="bottom" src="https://raw.githubusercontent.com/okmvia343/www/master/t/ntdtv/time.gif">09月02日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205415.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205417-514766-320x200.jpg" align ="left"></a><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205415.md#1" target="_blank">中共严打企业 分析师：下个目标是医疗保健业</a><br></h3>中共当局近期对科技业、教育业，甚至资安产业加大打击力度。英国分析师......<br><img align="bottom" src="https://raw.githubusercontent.com/okmvia343/www/master/t/ntdtv/time.gif">09月02日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205176.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13205223-a9a2693b037cbd1844c9385b0f5f126c-320x200.jpeg" align ="left"></a><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205176.md#1" target="_blank">云南德宏副州长徐琪勇被查 曾迫害法轮功</a><br></h3>据云南省纪委监委9月1日通报，该省德宏州副州长、州公安局局长徐琪勇......<br><img align="bottom" src="https://raw.githubusercontent.com/okmvia343/www/master/t/ntdtv/time.gif">09月02日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205176.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/09/id13206710-e0f6960caf0a9a223e952a1a0e3d5b22-600x400@1200x1200-320x200.jpeg" align ="left"></a><a href="https://github.com/okmvia343/djy/blob/master/gb/21/9/2/n13205176.md#1" target="_blank">云南德宏副州长徐琪勇被查 曾迫害法轮功</a><br></h3>据云南省纪委监委9月1日通报，该省德宏州副州长、州公安局局长徐琪勇......<br><img align="bottom" src="https://raw.githubusercontent.com/okmvia343/www/master/t/ntdtv/time.gif">09月02日</td></tr>
 <tr><td><h3><a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/okmvia343/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/okmvia343/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/okmvia343/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/okmvia343/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
